# cli-test-tool

./: .gitignore  Cargo.toml  README.md  config.json  ctt.js  package.json
backup/: config_parser.rs
src/: commandManager.js  config_parser.rs  get.rs  login.rs  main.rs  on_connect_start.rs  on_login.rs  options.rs  register.rs  send_message.rs  utils.rs
