[package]
name = "cli-testing-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.10"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tinyjson = "2.3.0"
substring = "1.4.5"
rust_socketio = "0.3.1"